feat: Update build files (#18)

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -701,7 +701,8 @@ services:
 
   # API service
   api:
-    image: langgenius/dify-api:1.11.2
+    image: ghcr.io/acedatacloud/dify-api:${BUILD_NUMBER:-latest}
+    platform: linux/amd64
     build: '../api/.'
     restart: always
     environment:
@@ -744,7 +745,9 @@ services:
   # worker service
   # The Celery worker for processing all queues (dataset, workflow, mail, etc.)
   worker:
-    image: langgenius/dify-api:1.11.2
+    image: ghcr.io/acedatacloud/dify-api:${BUILD_NUMBER:-latest}
+    platform: linux/amd64
+    build: '../api/.'
     restart: always
     environment:
       # Use the shared environment variables.
@@ -783,7 +786,9 @@ services:
   # worker_beat service
   # Celery beat for scheduling periodic tasks.
   worker_beat:
-    image: langgenius/dify-api:1.11.2
+    image: ghcr.io/acedatacloud/dify-api:${BUILD_NUMBER:-latest}
+    platform: linux/amd64
+    build: '../api/.'
     restart: always
     environment:
       # Use the shared environment variables.
@@ -813,7 +818,8 @@ services:
 
   # Frontend web application.
   web:
-    image: langgenius/dify-web:1.11.2
+    image: ghcr.io/acedatacloud/dify-web:${BUILD_NUMBER:-latest}
+    platform: linux/amd64
     build: '../web/.'
     restart: always
     environment:
