--- a/docker/docker-compose-template.yaml
+++ b/docker/docker-compose-template.yaml
@@ -21,7 +21,9 @@ services:
 
   # API service
   api:
-    image: langgenius/dify-api:1.11.2
+    image: ghcr.io/acedatacloud/dify-api:${BUILD_NUMBER:-latest}
+    platform: linux/amd64
+    build: '../api/.'
     restart: always
     environment:
       # Use the shared environment variables.
@@ -63,7 +65,9 @@ services:
   # worker service
   # The Celery worker for processing all queues (dataset, workflow, mail, etc.)
   worker:
-    image: langgenius/dify-api:1.11.2
+    image: ghcr.io/acedatacloud/dify-api:${BUILD_NUMBER:-latest}
+    platform: linux/amd64
+    build: '../api/.'
     restart: always
     environment:
       # Use the shared environment variables.
@@ -102,7 +106,9 @@ services:
   # worker_beat service
   # Celery beat for scheduling periodic tasks.
   worker_beat:
-    image: langgenius/dify-api:1.11.2
+    image: ghcr.io/acedatacloud/dify-api:${BUILD_NUMBER:-latest}
+    platform: linux/amd64
+    build: '../api/.'
     restart: always
     environment:
       # Use the shared environment variables.
@@ -132,7 +138,9 @@ services:
 
   # Frontend web application.
   web:
-    image: langgenius/dify-web:1.11.2
+    image: ghcr.io/acedatacloud/dify-web:${BUILD_NUMBER:-latest}
+    platform: linux/amd64
+    build: '../web/.'
     restart: always
     environment:
       CONSOLE_API_URL: ${CONSOLE_API_URL:-}
