--- a/docker/.env.example
+++ b/docker/.env.example
@@ -119,6 +119,17 @@ CHECK_UPDATE_URL=https://updates.dify.ai
 # or when a local model provides OpenAI compatible API, it can be replaced.
 OPENAI_API_BASE=https://api.openai.com/v1
 
+# ------------------------------
+# Ace Data Cloud Login (Console)
+# ------------------------------
+
+# When true, console sign-in will only allow Ace Data Cloud OAuth login and disable other login methods.
+ENABLE_ACEDATACLOUD_OAUTH_LOGIN=true
+
+# Ace Data Cloud auth service settings.
+ACEDATACLOUD_AUTH_BASE_URL=https://auth.acedata.cloud
+ACEDATACLOUD_AUTH_LOGIN_PATH=/auth/login
+
 # When enabled, migrations will be executed prior to application startup
 # and the application will start after the migrations have completed.
 MIGRATION_ENABLED=true
@@ -1382,9 +1393,9 @@ PLUGIN_STDIO_BUFFER_SIZE=1024
 PLUGIN_STDIO_MAX_BUFFER_SIZE=5242880
 
 PLUGIN_PYTHON_ENV_INIT_TIMEOUT=120
-# Plugin Daemon side timeout (configure to match the API side below) 
+# Plugin Daemon side timeout (configure to match the API side below)
 PLUGIN_MAX_EXECUTION_TIMEOUT=600
-# API side timeout (configure to match the Plugin Daemon side above) 
+# API side timeout (configure to match the Plugin Daemon side above)
 PLUGIN_DAEMON_TIMEOUT=600.0
 # PIP_MIRROR_URL=https://pypi.tuna.tsinghua.edu.cn/simple
 PIP_MIRROR_URL=
