--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -174,6 +174,16 @@ x-shared-env: &shared-api-worker-env
   SUPABASE_URL: ${SUPABASE_URL:-your-server-url}
   VECTOR_STORE: ${VECTOR_STORE:-weaviate}
   VECTOR_INDEX_NAME_PREFIX: ${VECTOR_INDEX_NAME_PREFIX:-Vector_index}
+  DORIS_HOST: ${DORIS_HOST:-}
+  DORIS_PORT: ${DORIS_PORT:-9030}
+  DORIS_USER: ${DORIS_USER:-root}
+  DORIS_PASSWORD: ${DORIS_PASSWORD:-}
+  DORIS_DATABASE: ${DORIS_DATABASE:-dify}
+  DORIS_STREAMLOAD_PORT: ${DORIS_STREAMLOAD_PORT:-8080}
+  DORIS_MIN_CONNECTION: ${DORIS_MIN_CONNECTION:-1}
+  DORIS_MAX_CONNECTION: ${DORIS_MAX_CONNECTION:-5}
+  DORIS_ENABLE_TEXT_SEARCH: ${DORIS_ENABLE_TEXT_SEARCH:-false}
+  DORIS_TEXT_SEARCH_ANALYZER: ${DORIS_TEXT_SEARCH_ANALYZER:-english}
   WEAVIATE_ENDPOINT: ${WEAVIATE_ENDPOINT:-http://weaviate:8080}
   WEAVIATE_API_KEY: ${WEAVIATE_API_KEY:-WVF5YThaHlkYwhGUSmCRgsX3tD5ngdN8pkih}
   WEAVIATE_GRPC_ENDPOINT: ${WEAVIATE_GRPC_ENDPOINT:-grpc://weaviate:50051}
