--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+*.difypkg
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
