--- a/plugins/nano-banana/provider/nano-banana.yaml
+++ b/plugins/nano-banana/provider/nano-banana.yaml
@@ -2,17 +2,17 @@ identity:
   author: "acedatacloud"
   name: "nano-banana"
   label:
-    en_US: "nano-banana"
-    zh_Hans: "nano-banana"
-    pt_BR: "nano-banana"
-    ja_JP: "nano-banana"
-  description:
     en_US: "Nano Banana"
     zh_Hans: "Nano Banana"
     pt_BR: "Nano Banana"
     ja_JP: "Nano Banana"
-  icon: "icon.svg"
-  icon_dark: "icon-dark.svg"
+  description:
+    en_US: "Generate and edit images via Ace Data Cloud Nano Banana Images API."
+    zh_Hans: "通过 Ace Data Cloud Nano Banana Images API 生成与编辑图片。"
+    pt_BR: "Gere e edite imagens via Ace Data Cloud Nano Banana Images API."
+    ja_JP: "Ace Data Cloud Nano Banana Images API を使って画像生成・編集を行います。"
+  icon: "icon.jpg"
+  icon_dark: "icon.jpg"
   tags:
     - image
 
@@ -30,48 +30,6 @@ credentials_for_provider:
       en_US: Acquire a token from the Ace Data Cloud console.
       zh_Hans: 从 Ace Data Cloud 控制台获取 Token。
     url: https://platform.acedata.cloud/documents/nano-banana-images-integration
-
-#########################################################################################
-# If you want to support OAuth, you can uncomment the following code.
-#########################################################################################
-# oauth_schema:
-#   client_schema:
-#     - name: "client_id"
-#       type: "secret-input"
-#       required: true
-#       url: https://example.com/oauth/authorize
-#       placeholder:
-#         en_US: "Please input your Client ID"
-#         zh_Hans: "请输入你的 Client ID"
-#         pt_BR: "Insira seu Client ID"
-#       help:
-#         en_US: "Client ID is used to authenticate requests to the example.com API."
-#         zh_Hans: "Client ID 用于认证请求到 example.com API。"
-#         pt_BR: "Client ID é usado para autenticar solicitações à API do example.com."
-#       label:
-#         zh_Hans: "Client ID"
-#         en_US: "Client ID"
-#     - name: "client_secret"
-#       type: "secret-input"
-#       required: true
-#       url: https://example.com/oauth/authorize
-#       placeholder:
-#         en_US: "Please input your Client Secret"
-#         zh_Hans: "请输入你的 Client Secret"
-#         pt_BR: "Insira seu Client Secret"
-#       help:
-#         en_US: "Client Secret is used to authenticate requests to the example.com API."
-#         zh_Hans: "Client Secret 用于认证请求到 example.com API。"
-#         pt_BR: "Client Secret é usado para autenticar solicitações à API do example.com."
-#       label:
-#         zh_Hans: "Client Secret"
-#         en_US: "Client Secret"
-#   credentials_schema:
-#     - name: "access_token"
-#       type: "secret-input"
-#       label:
-#         zh_Hans: "Access Token"
-#         en_US: "Access Token"
 
 tools:
   - tools/nano_banana_generate.yaml
