--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1389,6 +1389,12 @@ MARKETPLACE_API_URL=https://marketplace.dify.ai
 FORCE_VERIFYING_SIGNATURE=true
 ENFORCE_LANGGENIUS_PLUGIN_SIGNATURES=true
 
+# GitHub plugin signature bypass (server-side allowlist).
+# Note: This only works when FORCE_VERIFYING_SIGNATURE=false, because plugin-daemon will otherwise verify every package.
+# Allowlist supports: "Owner", "Owner/*", or "Owner/Repo" (case-insensitive).
+PLUGIN_GITHUB_SIGNATURE_BYPASS_ENABLED=false
+PLUGIN_GITHUB_SIGNATURE_BYPASS_REPOS=[]
+
 PLUGIN_STDIO_BUFFER_SIZE=1024
 PLUGIN_STDIO_MAX_BUFFER_SIZE=5242880
 
