--- a/docker/middleware.env.example
+++ b/docker/middleware.env.example
@@ -171,6 +171,12 @@ MARKETPLACE_API_URL=https://marketplace.dify.ai
 
 FORCE_VERIFYING_SIGNATURE=true
 
+# GitHub plugin signature bypass (server-side allowlist).
+# Note: This only works when FORCE_VERIFYING_SIGNATURE=false, because plugin-daemon will otherwise verify every package.
+# Allowlist supports: "Owner", "Owner/*", or "Owner/Repo" (case-insensitive).
+PLUGIN_GITHUB_SIGNATURE_BYPASS_ENABLED=false
+PLUGIN_GITHUB_SIGNATURE_BYPASS_REPOS=[]
+
 PLUGIN_PYTHON_ENV_INIT_TIMEOUT=120
 PLUGIN_MAX_EXECUTION_TIMEOUT=600
 # PIP_MIRROR_URL=https://pypi.tuna.tsinghua.edu.cn/simple
