feat: Fetch default from github (#36)

--- a/deploy/production/configmap/dify-env.yml
+++ b/deploy/production/configmap/dify-env.yml
@@ -33,6 +33,7 @@ data:
   FORCE_VERIFYING_SIGNATURE: "false"
   PLUGIN_GITHUB_SIGNATURE_BYPASS_ENABLED: "true"
   PLUGIN_GITHUB_SIGNATURE_BYPASS_REPOS: "[\"AceDataCloud/Dify\"]"
+  DEFAULT_TENANT_GITHUB_RELEASE_REPOS: "[\"AceDataCloud/Dify\"]"
 
   # Ace Data Cloud Login (Console).
   # When true, console sign-in will only allow Ace Data Cloud OAuth login and disable other login methods.
