--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1395,6 +1395,9 @@ ENFORCE_LANGGENIUS_PLUGIN_SIGNATURES=true
 PLUGIN_GITHUB_SIGNATURE_BYPASS_ENABLED=false
 PLUGIN_GITHUB_SIGNATURE_BYPASS_REPOS=[]
 
+# Auto-install GitHub latest release plugins for each new tenant (non-prerelease only).
+DEFAULT_TENANT_GITHUB_RELEASE_REPOS=[]
+
 PLUGIN_STDIO_BUFFER_SIZE=1024
 PLUGIN_STDIO_MAX_BUFFER_SIZE=5242880
 
