--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -601,6 +601,9 @@ x-shared-env: &shared-api-worker-env
   MARKETPLACE_API_URL: ${MARKETPLACE_API_URL:-https://marketplace.dify.ai}
   FORCE_VERIFYING_SIGNATURE: ${FORCE_VERIFYING_SIGNATURE:-true}
   ENFORCE_LANGGENIUS_PLUGIN_SIGNATURES: ${ENFORCE_LANGGENIUS_PLUGIN_SIGNATURES:-true}
+  PLUGIN_GITHUB_SIGNATURE_BYPASS_ENABLED: ${PLUGIN_GITHUB_SIGNATURE_BYPASS_ENABLED:-false}
+  PLUGIN_GITHUB_SIGNATURE_BYPASS_REPOS: ${PLUGIN_GITHUB_SIGNATURE_BYPASS_REPOS:-[]}
+  DEFAULT_TENANT_GITHUB_RELEASE_REPOS: ${DEFAULT_TENANT_GITHUB_RELEASE_REPOS:-[]}
   PLUGIN_STDIO_BUFFER_SIZE: ${PLUGIN_STDIO_BUFFER_SIZE:-1024}
   PLUGIN_STDIO_MAX_BUFFER_SIZE: ${PLUGIN_STDIO_MAX_BUFFER_SIZE:-5242880}
   PLUGIN_PYTHON_ENV_INIT_TIMEOUT: ${PLUGIN_PYTHON_ENV_INIT_TIMEOUT:-120}
