--- a/deploy/production/configmap/dify-env.yml
+++ b/deploy/production/configmap/dify-env.yml
@@ -41,3 +41,5 @@ data:
   ACEDATACLOUD_AUTH_BASE_URL: "https://auth.acedata.cloud"
   ACEDATACLOUD_AUTH_LOGIN_PATH: "/auth/login"
   ACEDATACLOUD_AUTH_AUTO_REGISTER: "true"
+  ACEDATACLOUD_PLATFORM_API_BASE_URL: "https://platform.acedata.cloud"
+  ACEDATACLOUD_AUTO_PROVISION_PLUGIN_CREDENTIALS: "true"
