--- a/docker/.env.example
+++ b/docker/.env.example
@@ -130,6 +130,10 @@ ENABLE_ACEDATACLOUD_OAUTH_LOGIN=true
 ACEDATACLOUD_AUTH_BASE_URL=https://auth.acedata.cloud
 ACEDATACLOUD_AUTH_LOGIN_PATH=/auth/login
 
+# Ace Data Cloud platform API settings (for auto-provisioning plugin credentials).
+ACEDATACLOUD_PLATFORM_API_BASE_URL=https://platform.acedata.cloud
+ACEDATACLOUD_AUTO_PROVISION_PLUGIN_CREDENTIALS=false
+
 # When enabled, migrations will be executed prior to application startup
 # and the application will start after the migrations have completed.
 MIGRATION_ENABLED=true
