--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -33,6 +33,8 @@ x-shared-env: &shared-api-worker-env
   ENABLE_ACEDATACLOUD_OAUTH_LOGIN: ${ENABLE_ACEDATACLOUD_OAUTH_LOGIN:-true}
   ACEDATACLOUD_AUTH_BASE_URL: ${ACEDATACLOUD_AUTH_BASE_URL:-https://auth.acedata.cloud}
   ACEDATACLOUD_AUTH_LOGIN_PATH: ${ACEDATACLOUD_AUTH_LOGIN_PATH:-/auth/login}
+  ACEDATACLOUD_PLATFORM_API_BASE_URL: ${ACEDATACLOUD_PLATFORM_API_BASE_URL:-https://platform.acedata.cloud}
+  ACEDATACLOUD_AUTO_PROVISION_PLUGIN_CREDENTIALS: ${ACEDATACLOUD_AUTO_PROVISION_PLUGIN_CREDENTIALS:-false}
   MIGRATION_ENABLED: ${MIGRATION_ENABLED:-true}
   FILES_ACCESS_TIMEOUT: ${FILES_ACCESS_TIMEOUT:-300}
   ACCESS_TOKEN_EXPIRE_MINUTES: ${ACCESS_TOKEN_EXPIRE_MINUTES:-60}
