--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -606,6 +606,8 @@ x-shared-env: &shared-api-worker-env
   PLUGIN_GITHUB_SIGNATURE_BYPASS_ENABLED: ${PLUGIN_GITHUB_SIGNATURE_BYPASS_ENABLED:-false}
   PLUGIN_GITHUB_SIGNATURE_BYPASS_REPOS: ${PLUGIN_GITHUB_SIGNATURE_BYPASS_REPOS:-[]}
   DEFAULT_TENANT_GITHUB_RELEASE_REPOS: ${DEFAULT_TENANT_GITHUB_RELEASE_REPOS:-[]}
+  PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_ENABLED: ${PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_ENABLED:-false}
+  PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_REPOS: ${PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_REPOS:-[]}
   PLUGIN_STDIO_BUFFER_SIZE: ${PLUGIN_STDIO_BUFFER_SIZE:-1024}
   PLUGIN_STDIO_MAX_BUFFER_SIZE: ${PLUGIN_STDIO_MAX_BUFFER_SIZE:-5242880}
   PLUGIN_PYTHON_ENV_INIT_TIMEOUT: ${PLUGIN_PYTHON_ENV_INIT_TIMEOUT:-120}
