--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1402,6 +1402,11 @@ PLUGIN_GITHUB_SIGNATURE_BYPASS_REPOS=[]
 # Auto-install GitHub latest release plugins for each new tenant (non-prerelease only).
 DEFAULT_TENANT_GITHUB_RELEASE_REPOS=[]
 
+# Sync GitHub latest release plugins asynchronously after login (best-effort, rate-limited).
+# When PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_REPOS is empty, it falls back to DEFAULT_TENANT_GITHUB_RELEASE_REPOS.
+PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_ENABLED=false
+PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_REPOS=[]
+
 PLUGIN_STDIO_BUFFER_SIZE=1024
 PLUGIN_STDIO_MAX_BUFFER_SIZE=5242880
 
