feat: Auto Bind ACE Token (#37)

--- a/deploy/production/configmap/dify-env.yml
+++ b/deploy/production/configmap/dify-env.yml
@@ -34,6 +34,8 @@ data:
   PLUGIN_GITHUB_SIGNATURE_BYPASS_ENABLED: "true"
   PLUGIN_GITHUB_SIGNATURE_BYPASS_REPOS: "[\"AceDataCloud/Dify\"]"
   DEFAULT_TENANT_GITHUB_RELEASE_REPOS: "[\"AceDataCloud/Dify\"]"
+  PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_ENABLED: "true"
+  PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_REPOS: "[\"AceDataCloud/Dify\"]"
 
   # Ace Data Cloud Login (Console).
   # When true, console sign-in will only allow Ace Data Cloud OAuth login and disable other login methods.
@@ -41,3 +43,5 @@ data:
   ACEDATACLOUD_AUTH_BASE_URL: "https://auth.acedata.cloud"
   ACEDATACLOUD_AUTH_LOGIN_PATH: "/auth/login"
   ACEDATACLOUD_AUTH_AUTO_REGISTER: "true"
+  ACEDATACLOUD_PLATFORM_API_BASE_URL: "https://platform.acedata.cloud"
+  ACEDATACLOUD_AUTO_PROVISION_PLUGIN_CREDENTIALS: "true"
