--- a/docker/.env.example
+++ b/docker/.env.example
@@ -130,6 +130,10 @@ ENABLE_ACEDATACLOUD_OAUTH_LOGIN=true
 ACEDATACLOUD_AUTH_BASE_URL=https://auth.acedata.cloud
 ACEDATACLOUD_AUTH_LOGIN_PATH=/auth/login
 
+# Ace Data Cloud platform API settings (for auto-provisioning plugin credentials).
+ACEDATACLOUD_PLATFORM_API_BASE_URL=https://platform.acedata.cloud
+ACEDATACLOUD_AUTO_PROVISION_PLUGIN_CREDENTIALS=false
+
 # When enabled, migrations will be executed prior to application startup
 # and the application will start after the migrations have completed.
 MIGRATION_ENABLED=true
@@ -1397,6 +1401,11 @@ PLUGIN_GITHUB_SIGNATURE_BYPASS_REPOS=[]
 
 # Auto-install GitHub latest release plugins for each new tenant (non-prerelease only).
 DEFAULT_TENANT_GITHUB_RELEASE_REPOS=[]
+
+# Sync GitHub latest release plugins asynchronously after login (best-effort, rate-limited).
+# When PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_REPOS is empty, it falls back to DEFAULT_TENANT_GITHUB_RELEASE_REPOS.
+PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_ENABLED=false
+PLUGIN_SYNC_GITHUB_LATEST_RELEASE_ON_LOGIN_REPOS=[]
 
 PLUGIN_STDIO_BUFFER_SIZE=1024
 PLUGIN_STDIO_MAX_BUFFER_SIZE=5242880
