refactor: move to one file

--- a/web/package.json
+++ b/web/package.json
@@ -5,13 +5,9 @@
   "private": true,
   "packageManager": "pnpm@10.26.2+sha512.0e308ff2005fc7410366f154f625f6631ab2b16b1d2e70238444dd6ae9d630a8482d92a451144debc492416896ed16f7b114a86ec68b8404b2443869e68ffda6",
   "imports": {
-    "#i18n/useTranslation": {
-      "react-server": "./i18n-config/useTranslation.server.ts",
-      "default": "./i18n-config/useTranslation.client.ts"
-    },
-    "#i18n/useLocale": {
-      "react-server": "./i18n-config/useLocale.server.ts",
-      "default": "./i18n-config/useLocale.client.ts"
+    "#i18n": {
+      "react-server": "./i18n-config/lib.server.ts",
+      "default": "./i18n-config/lib.client.ts"
     }
   },
   "engines": {
