feat: use more universal C.UTF-8 instead of en_US.UTF-8

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -58,8 +58,8 @@ FILES_URL=
 INTERNAL_FILES_URL=
 
 # Ensure UTF-8 encoding
-LANG=en_US.UTF-8
-LC_ALL=en_US.UTF-8
+LANG=C.UTF-8
+LC_ALL=C.UTF-8
 PYTHONIOENCODING=utf-8
 
 # ------------------------------
