--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "cachetools~=5.3.0",
     "celery~=5.5.2",
     "charset-normalizer>=3.4.4",
+    "daytona==0.128.1",
     "flask~=3.1.2",
     "flask-compress>=1.17,<1.18",
     "flask-cors~=6.0.0",
@@ -29,7 +30,8 @@ dependencies = [
     "google-cloud-aiplatform==1.49.0",
     "googleapis-common-protos==1.63.0",
     "gunicorn~=23.0.0",
-    "httpx[socks]~=0.27.0",
+    "httpx~=0.28.1",
+    "python-socks>=2.4.4",
     "jieba==0.42.1",
     "json-repair>=0.41.1",
     "jsonschema>=4.25.1",
