Fix i18n trigger permissions and checkout depth

--- a/.github/workflows/trigger-i18n-sync.yml
+++ b/.github/workflows/trigger-i18n-sync.yml
@@ -11,7 +11,7 @@ on:
       - 'web/i18n/en-US/*.json'
 
 permissions:
-  contents: read
+  contents: write
 
 jobs:
   trigger:
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 2
+          fetch-depth: 0
 
       - name: Detect changed files and generate diff
         id: detect
