fix(ci): handle edge cases in i18n workflows
- Fall back to empty tree SHA when HEAD~1 doesn't exist (first commit)
- Exit with error when repository_dispatch payload missing changed_files

--- a/.github/workflows/trigger-i18n-sync.yml
+++ b/.github/workflows/trigger-i18n-sync.yml
@@ -33,6 +33,11 @@ jobs:
           if [ -z "$BEFORE_SHA" ] || [ "$BEFORE_SHA" = "0000000000000000000000000000000000000000" ]; then
             BEFORE_SHA="HEAD~1"
           fi
+          # If HEAD~1 doesn't exist (e.g., first commit), fall back to empty tree
+          if ! git rev-parse --verify "$BEFORE_SHA" >/dev/null 2>&1; then
+            echo "Detected missing parent commit; falling back to empty tree for diff baseline."
+            BEFORE_SHA="$(git hash-object -t tree /dev/null)"
+          fi
 
           # Detect changed i18n files
           changed=$(git diff --name-only "$BEFORE_SHA" "${{ github.sha }}" -- 'web/i18n/en-US/*.json' 2>/dev/null | xargs -n1 basename 2>/dev/null | sed 's/.json$//' | tr '\n' ' ' || echo "")
