chore: upgrade Node.js minimum version to 22.12.0
- Update .nvmrc from 22.11.0 to 22.20.0 (lts-latest)
- Update web/package.json engines from >=v22.11.0 to >=22.12.0

This fixes jsdom 27.3.0 + parse5 8.0.0 ESM compatibility issues.
Node.js 22.12.0+ has require(esm) enabled by default, which allows
CommonJS modules to require ES modules.

Closes #30807

--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
     }
   },
   "engines": {
-    "node": ">=v22.11.0"
+    "node": ">=22.12.0"
   },
   "browserslist": [
     "last 1 Chrome version",
