--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -47,22 +47,29 @@ jobs:
         if: steps.changed-files.outputs.any_changed == 'true'
         run: uv run --directory api --dev lint-imports
 
-      - name: Run Basedpyright Checks
-        if: steps.changed-files.outputs.any_changed == 'true'
-        run: dev/basedpyright-check
-
       - name: Run Ty Type Checks
         if: steps.changed-files.outputs.any_changed == 'true'
         env:
           RUST_BACKTRACE: 1
         run: uv --directory api add ty && uv --directory api run ty check || true
 
-      - name: Run Mypy Type Checks
+      - name: Run pyrefly Type Checks
+        if: steps.changed-files.outputs.any_changed == 'true'
+        env:
+          RUST_BACKTRACE: 1
+        run: uv --directory api add pyrefly && uv --directory api run pyrefly check || true
+        
+      - name: Run zmypy Type Checks
         if: steps.changed-files.outputs.any_changed == 'true'
         env:
           RUST_BACKTRACE: 1
         run: uv --directory api add zuban && uv --directory api run zmypy --exclude '.venv/' --exclude 'tests/' --exclude 'migrations/' --check-untyped-defs --disable-error-code=import-untyped .
 
+      - name: Run Basedpyright Checks
+        if: steps.changed-files.outputs.any_changed == 'true'
+        run: dev/basedpyright-check
+
+        
       - name: Dotenv check
         if: steps.changed-files.outputs.any_changed == 'true'
         run: uv run --project api dotenv-linter ./api/.env.example ./web/.env.example
