feat(cli_api): implement CLI API for external sandbox interactions, including session management and request handling

--- a/api/.env.example
+++ b/api/.env.example
@@ -716,3 +716,11 @@ SANDBOX_EXPIRED_RECORDS_RETENTION_DAYS=30
 # Sandbox Dify CLI configuration
 # Directory containing dify CLI binaries (dify-cli-<os>-<arch>). Defaults to api/bin when unset.
 SANDBOX_DIFY_CLI_ROOT=
+
+
+# CLI API URL for sandbox (dify-sandbox or e2b) to call back to Dify API.
+# This URL must be accessible from the sandbox environment.
+# For local development: use http://localhost:5001 or http://127.0.0.1:5001
+# For Docker deployment: use http://api:5001 (internal Docker network)
+# For external sandbox (e.g., e2b): use a publicly accessible URL
+CLI_API_URL=http://localhost:5001
