--- a/docker/nginx/conf.d/default.conf.template
+++ b/docker/nginx/conf.d/default.conf.template
@@ -50,6 +50,11 @@ server {
       include proxy.conf;
     }
     
+    location /cli {
+      proxy_pass http://api:5001;
+      include proxy.conf;
+    }
+    
     # placeholder for acme challenge location
     ${ACME_CHALLENGE_LOCATION}
 
