fix: Add CSP for images in the frontend

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1345,6 +1345,8 @@ POSITION_PROVIDER_EXCLUDES=
 
 # CSP https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP
 CSP_WHITELIST=
+# CSP whitelist for image sources to prevent data exfiltration
+CSP_IMG_WHITELIST=http://localhost:* http://127.0.0.1:*
 
 # Enable or disable create tidb service job
 CREATE_TIDB_SERVICE_JOB_ENABLED=false
