--- a/web/.env.example
+++ b/web/.env.example
@@ -36,6 +36,8 @@ TEXT_GENERATION_TIMEOUT_MS=60000
 
 # CSP https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP
 NEXT_PUBLIC_CSP_WHITELIST=
+# CSP whitelist for image sources to prevent data exfiltration
+NEXT_PUBLIC_CSP_IMG_WHITELIST=http://localhost:* http://127.0.0.1:*
 # Default is not allow to embed into iframe to prevent Clickjacking: https://owasp.org/www-community/attacks/Clickjacking
 NEXT_PUBLIC_ALLOW_EMBED=
 
